# fastapi-dependency-visualizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
fastapi_dependency_visualizer/: visualizer.py
